// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`LogicalOperator component should render 1`] = `
<DocumentFragment>
  <select
    aria-label="logical operator"
    class="query-builder__logic"
  >
    <option
      value="AND"
    >
      AND
    </option>
    <option
      value="OR"
    >
      OR
    </option>
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>
</DocumentFragment>
`;

exports[`LogicalOperator component should render not render "AND" or "OR" when it is the first one 1`] = `
<DocumentFragment>
  <select
    aria-label="logical operator"
    class="query-builder__logic query-builder__logic--diluted"
  >
    <option
      value="AND"
    />
    <option
      value="NOT"
    >
      NOT
    </option>
  </select>
</DocumentFragment>
`;
